# cars-point-cloud-to-mesh

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  copyright_header.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.gitlab/issue_templates/: Bug.md  Release.md
cars_point_cloud_to_mesh/: __init__.py
cars_point_cloud_to_mesh/applications/: __init__.py
cars_point_cloud_to_mesh/applications/create_dtm_mesh/: __init__.py  create_dtm_mesh.py  percentile_of_unclassified_points.py  percentile_of_unclassified_points_tools.py
cars_point_cloud_to_mesh/applications/group_close_polygons/: __init__.py  group_close_polygons.py  point_to_point_based_grouping.py  point_to_point_based_grouping_tools.py
cars_point_cloud_to_mesh/applications/point_cloud_to_polygons/: __init__.py  external_alpha_shape.py  external_alpha_shape_tools.py  point_cloud_to_polygons.py
cars_point_cloud_to_mesh/applications/point_clouds_and_polygons_to_mesh/: __init__.py  alpha_shape_delaunay_dtm_projection.py  alpha_shape_delaunay_dtm_projection_tools.py  point_clouds_and_polygons_to_mesh.py
cars_point_cloud_to_mesh/pipelines/: __init__.py
cars_point_cloud_to_mesh/pipelines/point_cloud_to_mesh/: __init__.py  cars_point_cloud_to_mesh.py
docs/: Makefile
docs/source/: conf.py  developer_guide.rst  index.rst  installation.rst  usage.rst
notebooks/: cars_point_cloud_to_mesh.ipynb  generate_png_classifications.ipynb  generate_shape_file_for_vegetation.ipynb
tests/: __init__.py  helpers.py  test_cars_point_cloud_to_mesh.py
tests/cars_patch_data/: patch_file_cars_pc_tif_tools
tests/data/input/gizeh/: README.md  epi_pc_X.tif  epi_pc_Z.tif  epi_pc_classification.tif  epi_pc_color.tif  epi_pc_corr_msk.tif  epi_pc_filling.tif
